--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -720,7 +720,7 @@ DashboardScreen As screen:
                         lblInprogressIncentivesDS As label:
                             Align: =Align.Center
                             AutoHeight: =true
-                            Color: =If(CountRows(Filter(GCTotalIncentives,TechnicianID=VarTechnicianID.'Personnel No' && Value(TotalProposedLead)<>0))=0,RGBA(169,169,169,1),RGBA(0, 0, 0, 1))
+                            Color: =If(btnQuotedLeadsDS.DisplayMode=DisplayMode.Disabled,RGBA(169,169,169,1),RGBA(0, 0, 0, 1))
                             DisabledColor: =RGBA(0, 0, 0, 1)
                             DisplayMode: =DisplayMode.View
                             Font: =Font.Arial
@@ -749,7 +749,7 @@ DashboardScreen As screen:
 
                         lblQuotedLeadsDS As label:
                             Align: =Align.Center
-                            Color: =If(CountRows(Filter(GCTotalIncentives,TechnicianID=VarTechnicianID.'Personnel No' && Value(TotalProposedLead)<>0))=0,RGBA(169,169,169,1),RGBA(0, 0, 0, 1))
+                            Color: =If(btnQuotedLeadsDS.DisplayMode=DisplayMode.Disabled,RGBA(169,169,169,1),RGBA(0, 0, 0, 1))
                             DisabledColor: =RGBA(0, 0, 0, 1)
                             DisplayMode: =DisplayMode.View
                             Font: =Font.Arial
@@ -778,7 +778,7 @@ DashboardScreen As screen:
                         lblQuotedDS As label:
                             Align: =Align.Center
                             AutoHeight: =true
-                            Color: =If(CountRows(Filter(GCTotalIncentives,TechnicianID=VarTechnicianID.'Personnel No' && Value(TotalProposedLead)<>0))=0,RGBA(169,169,169,1),RGBA(0, 0, 0, 1))
+                            Color: =If(btnQuotedLeadsDS.DisplayMode=DisplayMode.Disabled,RGBA(169,169,169,1),RGBA(0, 0, 0, 1))
                             DisabledColor: =RGBA(0, 0, 0, 1)
                             DisplayMode: =DisplayMode.View
                             Font: =Font.Arial
@@ -879,7 +879,7 @@ DashboardScreen As screen:
                         lbllIncentivesLeadsDS As label:
                             Align: =Align.Center
                             AutoHeight: =true
-                            Color: =If(CountRows(Filter(GCTotalIncentives,TechnicianID=VarTechnicianID.'Personnel No'&& Value(TotalSoldLead)<>0))=0,RGBA(169,169,169,1),RGBA(0, 0, 0, 1))
+                            Color: =If(btnSoldLeadsDS.DisplayMode=DisplayMode.Disabled,RGBA(169,169,169,1),RGBA(0, 0, 0, 1))
                             DisabledColor: =RGBA(0, 0, 0, 1)
                             DisplayMode: =If(CountRows(Filter(GCTotalIncentives,TechnicianID=VarTechnicianID.'Personnel No'))=0,DisplayMode.Disabled,DisplayMode.Edit)
                             Font: =Font.Arial
@@ -919,7 +919,7 @@ DashboardScreen As screen:
 
                         lblSoldLeadsCountDS As label:
                             Align: =Align.Center
-                            Color: =If(CountRows(Filter(GCTotalIncentives,TechnicianID=VarTechnicianID.'Personnel No'&& Value(TotalSoldLead)<>0))=0,RGBA(169,169,169,1),RGBA(0, 0, 0, 1))
+                            Color: =If(btnSoldLeadsDS.DisplayMode=DisplayMode.Disabled,RGBA(169,169,169,1),RGBA(0, 0, 0, 1))
                             DisabledColor: =RGBA(0, 0, 0, 1)
                             DisplayMode: =If(CountRows(Filter(GCTotalIncentives,TechnicianID=VarTechnicianID.'Personnel No'))=0,DisplayMode.Disabled,DisplayMode.Edit)
                             Font: =Font.Arial
@@ -949,7 +949,7 @@ DashboardScreen As screen:
                         lblSoldLeadsDS As label:
                             Align: =Align.Center
                             AutoHeight: =true
-                            Color: =If(CountRows(Filter(GCTotalIncentives,TechnicianID=VarTechnicianID.'Personnel No'&& Value(TotalSoldLead)<>0))=0,RGBA(169,169,169,1),RGBA(0, 0, 0, 1))
+                            Color: =If(btnSoldLeadsDS.DisplayMode=DisplayMode.Disabled,RGBA(169,169,169,1),RGBA(0, 0, 0, 1))
                             DisabledColor: =RGBA(0, 0, 0, 1)
                             DisplayMode: =If(CountRows(Filter(GCTotalIncentives,TechnicianID=VarTechnicianID.'Personnel No'))=0,DisplayMode.Disabled,DisplayMode.Edit)
                             Font: =Font.Arial
