--- a/QuantumTechnicianApp/Src/QuotedSOldLeads.fx.yaml
+++ b/QuantumTechnicianApp/Src/QuotedSOldLeads.fx.yaml
@@ -670,9 +670,26 @@ QuotedSOldLeads As screen:
                     PaddingRight: =0
                     PaddingTop: =0
                     Size: =If(Parent.Width<378,10,Parent.Width<500,11,14)
-                    Text: |-
-                        = "$ " &
-                        If(Header="Quoted",If(!IsBlank(ThisItem.TotalproposedIncentives),Text(ThisItem.TotalproposedIncentives,"0.00"),0.00),If(!IsBlank(ThisItem.TotalSoldIncentives),Text(ThisItem.TotalSoldIncentives,"0.00"),0.00))
+                    Text: |
+                        ="$ " & If(
+                            Header = "Quoted",
+                            If(
+                                !IsBlank(ThisItem.TotalproposedIncentives),
+                                Text(
+                                    ThisItem.TotalproposedIncentives,
+                                    "0.00"
+                                ),
+                                0.00
+                            ),
+                            If(
+                                !IsBlank(ThisItem.TotalSoldIncentives),
+                                If(
+                                ThisItem.YearlyCapReached=true,"10000.00",
+                                    Text(  ThisItem.TotalSoldIncentives,"0.00")
+                        ),
+                                0.00
+                            )
+                        )
                     VerticalAlign: =VerticalAlign.Top
                     Visible: =If(btnheaderSoldLeads.Text="Quoted Leads" ||btnheaderSoldLeads.Text="Sold Leads",true,false)
                     Width: =Parent.Width/3
